--- a/src/compounds/css/nav.css
+++ b/src/compounds/css/nav.css
@@ -271,7 +271,7 @@
   [type="button"],
   [type="reset"],
   [type="submit"] {
-    -webkit-appearance: button;
+    appearance: button;
   }
   
   button:not(:disabled),
@@ -330,7 +330,7 @@
   
   [type="search"] {
     outline-offset: -2px;
-    -webkit-appearance: none;
+   
   }
   
   [type="search"]::-webkit-search-decoration {
@@ -3552,8 +3552,7 @@
     display: block;
     min-height: 1.5rem;
     padding-left: 1.5rem;
-    -webkit-print-color-adjust: exact;
-    color-adjust: exact;
+    
   }
   
   .custom-control-inline {
